--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
     "vite": "^6.3.2"
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "http-proxy-middleware": "^3.0.5",
     "lucide-react": "^0.501.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.15.3"
